[tool.poetry]
name = "HMWEB1"
version = "0.1.0"
description = "testing poetry"
authors = ["Alex <GentelmanZocker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
